[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beem"
version = "0.25.00"
description = "Unofficial Python library for HIVE and STEEM"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com"},
]
maintainers = [
    {name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com"},
]
keywords = ["hive", "steem", "library", "api", "rpc"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "ecdsa",
    "requests",
    "websocket-client",
    "appdirs",
    "scrypt",
    "pycryptodomex",
    "pytz",
    "Click",
    "click_shell",
    "prettytable",
    "ruamel.yaml",
    "diff_match_patch",
    "asn1crypto",
]

[project.urls]
"Homepage" = "http://www.github.com/holgern/beem"
"Download" = "https://github.com/holgern/beem/tarball/0.24.27"
"Bug Tracker" = "https://github.com/holgern/beem/issues"

[project.scripts]
beempy = "beem.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["beem", "beemapi", "beembase", "beemgraphenebase", "beemgrapheneapi", "beemstorage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  
]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "tests/fixtures/*",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]
[tool.mypy]
python_version = ">3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# [tool.uv.developers]
# python-dev-deps = [
#     "mock>=2.0.0",
#     "pytest",
#     "pytest-mock",
#     "pytest-cov",
#     "parameterized",
#     "coverage",
#     "tox",
#     "sphinx",
#     "doc8",
#     "ruff",
#     "mypy",
#     "bandit",
#     "readme_renderer",
#     "sphinx-click",
#     "codacy-coverage",
#     "codecov",
#     "build",
#     "twine",
#     "tomli",
# ]
