[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beem"
version = "0.25.00"
description = "Unofficial Python library for HIVE and STEEM"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com"},
]
maintainers = [
    {name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com"},
    {name = "Michael Garcia", email = "thecrazygm@gmail.com"}
]
keywords = ["hive", "steem", "library", "api", "rpc"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "ecdsa",
    "requests",
    "websocket-client",
    "appdirs",
    "scrypt",
    "pycryptodomex",
    "Click",
    "click_shell",
    "prettytable",
    "ruamel.yaml",
    "diff_match_patch",
    "asn1crypto",
]

[project.urls]
"Homepage" = "http://www.github.com/holgern/beem"
"Download" = "https://github.com/holgern/beem/tarball/0.24.27"
"Bug Tracker" = "https://github.com/holgern/beem/issues"

[project.scripts]
beempy = "beem.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["beem", "beemapi", "beembase", "beemgraphenebase", "beemgrapheneapi", "beemstorage"]

[tool.uv]
default-groups = [ ]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "tests/fixtures/*",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.mypy]
python_version = ">3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[dependency-groups]
dev = [
    "mock",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "parameterized",
    "coverage",
    "tox",
    "sphinx",
    "doc8",
    "ruff",
    "mypy",
    "bandit",
    "readme_renderer",
    "sphinx-click",
    "codacy-coverage",
    "codecov",
    "build",
    "twine",
    "tomli",
]
